feat: UserInfo request - examples in documentation
